<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    tools:context="com.opop.brazius.bitcoinexchangerates.Calculator">

    <EditText
        android:id="@+id/et_usd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/et_euro"
        android:ems="10"
        android:inputType="number" />

    <TextView
        android:id="@+id/tv_usd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/et_usd"
        android:layout_alignBottom="@+id/et_usd"
        android:text="@string/USD"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/et_euro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/et_gbp"
        android:layout_below="@+id/tv_usd"
        android:ems="10"
        android:inputType="number" />

    <TextView
        android:id="@+id/tv_euro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/et_euro"
        android:layout_alignBottom="@+id/et_euro"
        android:layout_alignParentStart="true"
        android:text="@string/euro"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/et_gbp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tv_gbp"
        android:layout_alignBottom="@+id/tv_gbp"
        android:layout_alignStart="@+id/et_bitcoin"
        android:ems="10"
        android:inputType="number" />

    <TextView
        android:id="@+id/tv_gbp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_euro"
        android:text="@string/gbp"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/et_bitcoin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_gbp"
        android:layout_toEndOf="@+id/tv_tv_bitcoin"
        android:ems="10"
        android:inputType="number" />

    <TextView
        android:id="@+id/tv_tv_bitcoin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/et_bitcoin"
        android:layout_alignBottom="@+id/et_bitcoin"
        android:layout_alignStart="@+id/tv_gbp"
        android:text="@string/bitcoin"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btn_convert_to_bit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_bitcoin"
        android:layout_toEndOf="@+id/btn_convert_from_bit"
        android:text="@string/convertoToBit" />

    <Button
        android:id="@+id/btn_convert_from_bit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btn_convert_to_bit"
        android:layout_alignBottom="@+id/btn_convert_to_bit"
        android:layout_alignParentStart="true"
        android:text="@string/convertUEG" />

</RelativeLayout>
